- btrfs: factor out nocow ordered extent and extent map generation   into a helper (git-fixes). - btrfs: fix qgroup reservation leak on failure to allocate   ordered extent (git-fixes). - btrfs: move ordered extent cleanup to where they are allocated   (git-fixes). - btrfs: remove the unused locked_folio parameter from   btrfs_cleanup_ordered_extents() (git-fixes). - btrfs: use unsigned types for constants defined as bit shifts   (git-fixes). - Refresh   patches.suse/0005-btrfs-do-proper-folio-cleanup-when-run_delalloc_noco.patch.

--- a/series.conf
+++ b/series.conf
@@ -3707,6 +3707,7 @@
 	patches.suse/0003-btrfs-fix-error-handling-of-submit_uncompressed_rang.patch
 	patches.suse/0004-btrfs-do-proper-folio-cleanup-when-cow_file_range-fa.patch
 	patches.suse/0005-btrfs-do-proper-folio-cleanup-when-run_delalloc_noco.patch
+	patches.suse/btrfs-remove-the-unused-locked_folio-parameter-from-.patch
 	patches.suse/exec-Make-sure-task-comm-is-always-NUL-terminated.patch
 	patches.suse/pstore-blk-trivial-typo-fixes.patch
 	patches.suse/dlm-fix-removal-of-rsb-struct-that-is-master-and-dir-record.patch
@@ -7153,6 +7154,8 @@
 	patches.suse/firmware-xilinx-Dont-send-linux-address-to-get-fpga-.patch
 	patches.suse/erofs-initialize-decompression-early.patch
 	patches.suse/btrfs-always-fallback-to-buffered-write-if-the-inode.patch
+	patches.suse/btrfs-factor-out-nocow-ordered-extent-and-extent-map.patch
+	patches.suse/btrfs-move-ordered-extent-cleanup-to-where-they-are-.patch
 	patches.suse/btrfs-get-zone-unusable-bytes-while-holding-lock-at-.patch
 	patches.suse/btrfs-get-used-bytes-while-holding-lock-at-btrfs_rec.patch
 	patches.suse/btrfs-fix-reclaimed-bytes-accounting-after-automatic.patch
@@ -8667,6 +8670,8 @@
 	patches.suse/nvmet-fcloop-don-t-wait-for-lport-cleanup.patch
 	patches.suse/nvme-fc-do-not-reference-lsrsp-after-failure.patch
 	patches.suse/btrfs-fix-fsync-of-files-with-no-hard-links-not-persisting.patch
+	patches.suse/btrfs-use-unsigned-types-for-constants-defined-as-bi.patch
+	patches.suse/btrfs-fix-qgroup-reservation-leak-on-failure-to-allo.patch
 	patches.suse/gfs2-Don-t-start-unnecessary-transactions-during-log.patch
 	patches.suse/erofs-fix-file-handle-encoding-for-64-bit-NIDs.patch
 	patches.suse/erofs-avoid-using-multiple-devices-with-different-type.patch
