--- a/series.conf
+++ b/series.conf
@@ -31954,6 +31954,7 @@
 	patches.suse/ASoc-SOF-topology-connect-DAI-to-a-single-DAI-link.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-checking-l2cap_chan-security.patch
 	patches.suse/Bluetooth-btusb-use-skb_pull-to-avoid-unsafe-access-.patch
+	patches.suse/0001-vmxnet3-update-MTU-after-device-quiesce.patch
 	patches.suse/can-bcm-add-locking-for-bcm_op-runtime-updates.patch
 	patches.suse/can-bcm-add-missing-rcu-read-protection-for-procfs-c.patch
 	patches.suse/can-slcan-allow-reception-of-short-error-messages.patch
