vmxnet3: correctly report gso type for UDP tunnels (bsc#1244626).

--- a/series.conf
+++ b/series.conf
@@ -31977,6 +31977,7 @@
 	patches.suse/Squashfs-check-return-result-of-sb_min_blocksize.patch
 	patches.suse/nilfs2-add-pointer-check-for-nilfs_direct_propagate.patch
 	patches.suse/nilfs2-do-not-propagate-ENOENT-error-from-nilfs_btree_propagate.patch
+	patches.suse/0002-vmxnet3-correctly-report-gso-type-for-UDP-tunnels.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Use-memcpy-for-BIOS-version.patch
