vmxnet3: support higher link speeds from vmxnet3 v9 (bsc#1244626).

--- a/series.conf
+++ b/series.conf
@@ -29140,6 +29140,7 @@
 	patches.suse/net-mana-Increase-the-DEF_RX_BUFFERS_PER_QUEUE-to-10.patch
 	patches.suse/net-mana-Add-get_link-and-get_link_ksettings-in-etht.patch
 	patches.suse/ipv4-Convert-icmp_route_lookup-to-dscp_t.patch
+	patches.suse/0003-vmxnet3-support-higher-link-speeds-from-vmxnet3-v9.patch
 	patches.suse/net-mana-Enable-debugfs-files-for-MANA-device.patch
 	patches.suse/net_sched-sch_sfq-handle-bigger-packets.patch
 	patches.suse/ice-consistently-use-q_idx-in-ice_vc_cfg_qs_msg.patch
