- uprobes: Use kzalloc to allocate xol area (git-fixes). - Refresh   patches.suse/uprobes-introduce-the-global-struct-vm_special_mapping-xol_mapping.patch.

--- a/series.conf
+++ b/series.conf
@@ -27597,6 +27597,7 @@
 	patches.suse/msft-hv-3046-uio_hv_generic-Fix-kernel-NULL-pointer-dereference-i.patch
 	patches.suse/msft-hv-3047-Drivers-hv-vmbus-Fix-rescind-handling-in-uio_hv_gene.patch
 	patches.suse/VMCI-Fix-use-after-free-when-removing-resource-in-vm.patch
+	patches.suse/uprobes-Use-kzalloc-to-allocate-xol-area.patch
 	patches.suse/perf-aux-Fix-AUX-buffer-serialization.patch
 	patches.suse/clocksource-drivers-imx-tpm-Fix-return-ETIME-when-de.patch
 	patches.suse/clocksource-drivers-imx-tpm-Fix-next-event-not-takin.patch
