bpf: Force uprobe bpf program to always return 0 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29191,6 +29191,7 @@
 	patches.suse/bpf-Prevent-tailcall-infinite-loop-caused-by-freplac.patch
 	patches.suse/bpf-arm64-Remove-garbage-frame-for-struct_ops-trampoline.patch
 	patches.suse/selftests-bpf-Clean-up-open-coded-gettid-syscall-inv.patch
+	patches.suse/bpf-Force-uprobe-bpf-program-to-always-return-0.patch
 	patches.suse/bpf-Call-free_htab_elem-after-htab_unlock_bucket.patch
 	patches.suse/selftests-bpf-Move-ENOTSUPP-from-bpf_util.h.patch
 	patches.suse/selftests-bpf-Test-the-update-operations-for-htab-of.patch
