--- a/series.conf
+++ b/series.conf
@@ -29352,6 +29352,7 @@
 	patches.suse/x86-tdx-Dynamically-disable-SEPT-violations-from-causing-V.patch
 	patches.suse/x86-tdx-Enable-CPU-topology-enumeration.patch
 	patches.suse/trace-trace_event_perf-remove-duplicate-samples-on-the-fir.patch
+	patches.suse/tracing-Use-atomic64_inc_return-in-trace_clock_counter.patch
 	patches.suse/ftrace-Fix-regression-with-module-command-in-stack_trace_filter.patch
 	patches.suse/mfd-tps65010-Use-IRQF_NO_AUTOEN-flag-in-request_irq-.patch
 	patches.suse/mfd-da9052-spi-Change-read-mask-to-write-mask.patch
