tracing: Fix cmp_entries_dup() to respect sort() comparison rules (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29666,6 +29666,7 @@
 	patches.suse/watchdog-mediatek-Add-support-for-MT6735-TOPRGU-WDT.patch
 	patches.suse/watchdog-rti-of-honor-timeout-sec-property.patch
 	patches.suse/HID-wacom-fix-when-get-product-name-maybe-null-point.patch
+	patches.suse/tracing-Fix-cmp_entries_dup-to-respect-sort-comparison-rul.patch
 	patches.suse/net-enetc-Do-not-configure-preemptible-TCs-if-SIs-do.patch
 	patches.suse/net-sched-tbf-correct-backlog-statistic-for-GSO-packets.patch
 	patches.suse/net-hsr-avoid-potential-out-of-bound-access-in-fill_.patch
