tracing/eprobe: Fix to release eprobe when failed to add dyn_event (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29777,6 +29777,7 @@
 	patches.suse/iio-magnetometer-yas530-use-signed-integer-type-for-.patch
 	patches.suse/x86-cpu-Add-Lunar-Lake-to-list-of-CPUs-with-a-broken-MONIT.patch
 	patches.suse/cacheinfo-Allocate-memory-during-CPU-hotplug-if-not-done-f.patch
+	patches.suse/tracing-eprobe-Fix-to-release-eprobe-when-failed-to-add-dy.patch
 	patches.suse/btrfs-fix-missing-snapshot-drew-unlock-when-root-is-.patch
 	patches.suse/btrfs-flush-delalloc-workers-queue-before-stopping-c.patch
 	patches.suse/Revert-unicode-Don-t-special-case-ignorable-code-poi.patch
