--- a/series.conf
+++ b/series.conf
@@ -29872,6 +29872,7 @@
 	patches.suse/x86-xen-don-t-do-PV-iret-hypercall-through-hypercall.patch
 	patches.suse/x86-xen-add-central-hypercall-functions.patch
 	patches.suse/x86-xen-use-new-hypercall-functions-instead-of-hyper.patch
+	patches.suse/fgraph-Still-initialize-idle-shadow-stacks-when-starting.patch
 	patches.suse/x86-static-call-fix-32-bit-build.patch
 	patches.suse/msft-hv-3090-x86-hyperv-Fix-hv-tsc-page-based-sched_clock-for-hib.patch
 	patches.suse/msft-hv-3091-tools-hv-change-permissions-of-NetworkManager-config.patch
