bnxt_en: Fix GSO type for HW GRO packets on 5750X chips (bsc#1244523).

--- a/series.conf
+++ b/series.conf
@@ -50292,6 +50292,7 @@
 	patches.suse/nilfs2-fix-potential-out-of-bounds-memory-access-in-nilfs_find_entry.patch
 	patches.suse/scatterlist-fix-incorrect-func-name-in-kernel-doc.patch
 	patches.suse/tipc-fix-NULL-deref-in-cleanup_bearer.patch
+	patches.suse/bnxt_en-Fix-GSO-type-for-HW-GRO-packets-on-5750X-chi.patch
 	patches.suse/net-defer-final-struct-net-free-in-netns-dismantle.patch
 	patches.suse/net-sched-netem-account-for-backlog-updates-from-child-qdi.patch
 	patches.suse/0001-drm-amdkfd-Correct-the-migration-DMA-map-direction.patch
