blacklist.conf: Add c4c9cebe2fb9 cgroup/cpuset: Further optimize code if CONFIG_CPUSETS_V1 not set

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -390,3 +390,4 @@ ee62ce7a1d909ccba0399680a03c2dee83bcae95 # mostly only required for broken hardw
 0b0cae7119a0ec9449d7261b5e672a5fed765068 # breaks kABI
 3c902383f2da91cba3821b73aa6edd49f4db6023 # included as part of original backport
 b3caba8f7a34a2bbaf45ffc6ff3a49b70afeb192 # refresh patches.suse/pidfs-ensure-that-PIDFS_INFO_EXIT-is-available.patch before this patch
+c4c9cebe2fb9cdc73e55513de7af7a4f50260e88 # optimization only, inlines would complicate re-enablement of CONFIG_CPUSETS_V1
