--- a/blacklist.conf
+++ b/blacklist.conf
@@ -392,3 +392,4 @@ ee62ce7a1d909ccba0399680a03c2dee83bcae95 # mostly only required for broken hardw
 b3caba8f7a34a2bbaf45ffc6ff3a49b70afeb192 # refresh patches.suse/pidfs-ensure-that-PIDFS_INFO_EXIT-is-available.patch before this patch
 c4c9cebe2fb9cdc73e55513de7af7a4f50260e88 # optimization only, inlines would complicate re-enablement of CONFIG_CPUSETS_V1
 0efc297a3c4974dbd609ee36fc6345720b6ca735 # optimization only, has further cleanups
+e1a0202c6bfda24002a3ae2115154fa90104c649 # unneeded, may be taken as a prereq later
