--- a/series.conf
+++ b/series.conf
@@ -7989,6 +7989,7 @@
 	patches.suse/cgroup-cpuset-Fix-incorrect-isolated_cpus-update-in-update_parent_effective_cpumask.patch
 	patches.suse/cgroup-cpuset-Fix-error-handling-in-remote_partition_disable.patch
 	patches.suse/cgroup-cpuset-Don-t-allow-creation-of-local-partition-over.patch
+	patches.suse/cgroup-cpuset-Fix-race-between-newly-created-partition-and.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-tracepoints.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-debug-printing.patch
 	patches.suse/KVM-Allow-building-irqbypass.ko-as-as-module-when-kv.patch
