--- a/series.conf
+++ b/series.conf
@@ -31829,6 +31829,7 @@
 	patches.suse/drm-amdgpu-gfx11-fix-num_mec.patch
 	patches.suse/tools-power-turbostat-Increase-CPU_SUBSET_MAXCPUS-to-8192.patch
 	patches.suse/tools-power-turbostat-report-CoreThr-per-measurement-interval.patch
+	patches.suse/cgroup-cpuset-Fix-race-between-newly-created-partition-and.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-tracepoints.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-debug-printing.patch
 	patches.suse/KVM-x86-Acquire-SRCU-in-KVM_GET_MP_STATE-to-protect-.patch
