--- a/series.conf
+++ b/series.conf
@@ -52550,6 +52550,7 @@
 	patches.suse/cgroup-cpuset-Fix-incorrect-isolated_cpus-update-in-update_parent_effective_cpumask.patch
 	patches.suse/cgroup-cpuset-Fix-error-handling-in-remote_partition_disable.patch
 	patches.suse/cgroup-cpuset-Don-t-allow-creation-of-local-partition-over.patch
+	patches.suse/cgroup-cpuset-Fix-race-between-newly-created-partition-and.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-tracepoints.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-debug-printing.patch
 	patches.suse/KVM-x86-Acquire-SRCU-in-KVM_GET_MP_STATE-to-protect-.patch
