cgroup/cpuset: Don't allow creation of local partition over a remote one (bsc#1241166).

--- a/series.conf
+++ b/series.conf
@@ -7988,6 +7988,7 @@
 	patches.suse/tools-power-turbostat-Restore-GFX-sysfs-fflush-call.patch
 	patches.suse/cgroup-cpuset-Fix-incorrect-isolated_cpus-update-in-update_parent_effective_cpumask.patch
 	patches.suse/cgroup-cpuset-Fix-error-handling-in-remote_partition_disable.patch
+	patches.suse/cgroup-cpuset-Don-t-allow-creation-of-local-partition-over.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-tracepoints.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-debug-printing.patch
 	patches.suse/KVM-Allow-building-irqbypass.ko-as-as-module-when-kv.patch
