--- a/blacklist.conf
+++ b/blacklist.conf
@@ -948,3 +948,4 @@ fb6a421fb6153d97cf3058f9bd550b377b76a490 # CONFIG_LTO_CLANG=n
 c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_STATE=n (alwys 'y' in SUSE configs)
 2e2f925fe737576df2373931c95e1a2b66efdfef # CVE-2025-38048 https://bugzilla.suse.com/show_bug.cgi?id=1245085#c2
 87c259a7a359e73e6c52c68fcbec79988999b4e6 # only for CONFIG_LOCKDEP
+1bf67c8fdbda21fadd564a12dbe2b13c1ea5eda7 # fixes/adds feature to obsolete cpuset FS
