--- a/blacklist.conf
+++ b/blacklist.conf
@@ -393,3 +393,4 @@ b3caba8f7a34a2bbaf45ffc6ff3a49b70afeb192 # refresh patches.suse/pidfs-ensure-tha
 c4c9cebe2fb9cdc73e55513de7af7a4f50260e88 # optimization only, inlines would complicate re-enablement of CONFIG_CPUSETS_V1
 0efc297a3c4974dbd609ee36fc6345720b6ca735 # optimization only, has further cleanups
 e1a0202c6bfda24002a3ae2115154fa90104c649 # unneeded, may be taken as a prereq later
+1bf67c8fdbda21fadd564a12dbe2b13c1ea5eda7 # applies to CONFIG_CPUSETS_V1 only and obsolete cpuset FS
