--- a/blacklist.conf
+++ b/blacklist.conf
@@ -947,3 +947,4 @@ b9551da8cf3ade01a50316df8a618fd945723ee0 # libbpf is sourced from GitHub and not
 fb6a421fb6153d97cf3058f9bd550b377b76a490 # CONFIG_LTO_CLANG=n
 c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_STATE=n (alwys 'y' in SUSE configs)
 2e2f925fe737576df2373931c95e1a2b66efdfef # CVE-2025-38048 https://bugzilla.suse.com/show_bug.cgi?id=1245085#c2
+87c259a7a359e73e6c52c68fcbec79988999b4e6 # only for CONFIG_LOCKDEP
