blacklist.conf: Add 87c259a7a359 cgroup: Fix compilation issue due to cgroup_mutex not being exported

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -394,3 +394,4 @@ c4c9cebe2fb9cdc73e55513de7af7a4f50260e88 # optimization only, inlines would comp
 0efc297a3c4974dbd609ee36fc6345720b6ca735 # optimization only, has further cleanups
 e1a0202c6bfda24002a3ae2115154fa90104c649 # unneeded, may be taken as a prereq later
 1bf67c8fdbda21fadd564a12dbe2b13c1ea5eda7 # applies to CONFIG_CPUSETS_V1 only and obsolete cpuset FS
+87c259a7a359e73e6c52c68fcbec79988999b4e6 # only for CONFIG_LOCKDEP
