--- a/series.conf
+++ b/series.conf
@@ -54025,6 +54025,7 @@
 	patches.kabi/kABI-fix-for-net-Remove-RTNL-dance-for-SIOCBRADDIF-a.patch
 	patches.kabi/serial-mctrl_gpio-split-disable_ms-into-sync-and-no_.patch
 	patches.kabi/PCI-endpoint-Retain-fixed-size-BAR-size-as-well-as-a.patch
+	patches.kabi/kabi-restore-layout-of-struct-cgroup_subsys.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
