kabi: restore layout of struct cgroup_subsys (bsc#1241166).

--- a/series.conf
+++ b/series.conf
@@ -33214,6 +33214,7 @@
 	patches.kabi/kabi-restore-layout-of-struct-page_counter.patch
 	patches.kabi/ucsi_debugfs_entry-hide-signedness-change.patch
 	patches.kabi/truct-dwc3-hide-new-member-wakeup_pending_funcs.patch
+	patches.kabi/kabi-restore-layout-of-struct-cgroup_subsys.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
