kabi: restore layout of struct cgroup_subsys (bsc#1241166).

--- a/series.conf
+++ b/series.conf
@@ -10051,6 +10051,7 @@
 	########################################################
 	# kABI consistency patches
 	########################################################
+	patches.kabi/kabi-restore-layout-of-struct-cgroup_subsys.patch
 
 	########################################################
 	# preempt-rt backport converged
