x86/cpufeatures: Rename X86_CMPXCHG64 to X86_CX8 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6551,6 +6551,7 @@
 	patches.suse/x86-ibt-Implement-FineIBT-BHI-mitigation.patch
 	patches.suse/x86-ibt-Optimize-the-fineibt-bhi-arity-1-case.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
+	patches.suse/x86-cpufeatures-Rename-X86_CMPXCHG64-to-X86_CX8.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
 	patches.suse/x86-speculation-Add-a-conditional-CS-prefix-to-CALL_NOSPEC.patch
 	patches.suse/msft-hv-3205-x86-hyperv-Use-named-operands-in-inline-asm.patch
