x86/cpufeatures: Generate the <asm/cpufeaturemasks.h> header based on  build config (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6556,6 +6556,7 @@
 	patches.suse/x86-speculation-Add-a-conditional-CS-prefix-to-CALL_NOSPEC.patch
 	patches.suse/msft-hv-3205-x86-hyperv-Use-named-operands-in-inline-asm.patch
 	patches.suse/x86-cpufeatures-Add-REQUIRED-DISABLED-feature-configs.patch
+	patches.suse/x86-cpufeatures-Generate-the-asm-cpufeaturemasks.h-header-.patch
 	patches.suse/x86-entry-Add-__init-to-ia32_emulation_override_cmdline.patch
 	patches.suse/x86-amd_node-platform-x86-amd-hsmp-Have-HSMP-use-SMN-throu.patch
 	patches.suse/x86-amd_node-Add-SMN-offsets-to-exclusive-region-access.patch
