--- a/series.conf
+++ b/series.conf
@@ -8672,6 +8672,7 @@
 	patches.suse/btrfs-fix-fsync-of-files-with-no-hard-links-not-persisting.patch
 	patches.suse/btrfs-use-unsigned-types-for-constants-defined-as-bi.patch
 	patches.suse/btrfs-fix-qgroup-reservation-leak-on-failure-to-allo.patch
+	patches.suse/btrfs-fix-invalid-data-space-release-when-truncating.patch
 	patches.suse/gfs2-Don-t-start-unnecessary-transactions-during-log.patch
 	patches.suse/erofs-fix-file-handle-encoding-for-64-bit-NIDs.patch
 	patches.suse/erofs-avoid-using-multiple-devices-with-different-type.patch
