--- a/series.conf
+++ b/series.conf
@@ -22230,6 +22230,7 @@
 	patches.suse/nvme-clear-caller-pointer-on-identify-failure.patch
 	patches.suse/workqueue-Add-rcu-lock-check-at-the-end-of-work-item-execution.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-on-cou.patch
+	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-corner.patch
 	patches.suse/x86-resctrl-Remove-hard-coded-memory-bandwidth-limit.patch
 	patches.suse/x86-resctrl-Read-supported-bandwidth-sources-from-CPUID.patch
 	patches.suse/x86-resctrl-Remove-redundant-variable-in-mbm_config_write_.patch
