timekeeping: Fix cross-timestamp interpolation for non-x86 (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -22231,6 +22231,7 @@
 	patches.suse/workqueue-Add-rcu-lock-check-at-the-end-of-work-item-execution.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-on-cou.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-corner.patch
+	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-for-no.patch
 	patches.suse/x86-resctrl-Remove-hard-coded-memory-bandwidth-limit.patch
 	patches.suse/x86-resctrl-Read-supported-bandwidth-sources-from-CPUID.patch
 	patches.suse/x86-resctrl-Remove-redundant-variable-in-mbm_config_write_.patch
