--- a/series.conf
+++ b/series.conf
@@ -27255,6 +27255,7 @@
 	patches.suse/usb-gadget-u_serial-Set-start_delayed-during-suspend.patch
 	patches.suse/USB-serial-debug-do-not-echo-input-by-default.patch
 	patches.suse/genirq-irqdesc-Honor-caller-provided-affinity-in-all.patch
+	patches.suse/ntp-Clamp-maxerror-and-esterror-to-operating-range.patch
 	patches.suse/x86-mtrr-Check-if-fixed-MTRRs-exist-before-saving-them.patch
 	patches.suse/fix-bitmap-corruption-on-close_range-with-CLOSE_RANG.patch
 	patches.suse/exec-Fix-ToCToU-between-perm-check-and-set-uid-gid-u.patch
