ntp: Safeguard against time_constant overflow (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -27256,6 +27256,7 @@
 	patches.suse/USB-serial-debug-do-not-echo-input-by-default.patch
 	patches.suse/genirq-irqdesc-Honor-caller-provided-affinity-in-all.patch
 	patches.suse/ntp-Clamp-maxerror-and-esterror-to-operating-range.patch
+	patches.suse/ntp-Safeguard-against-time_constant-overflow.patch
 	patches.suse/x86-mtrr-Check-if-fixed-MTRRs-exist-before-saving-them.patch
 	patches.suse/fix-bitmap-corruption-on-close_range-with-CLOSE_RANG.patch
 	patches.suse/exec-Fix-ToCToU-between-perm-check-and-set-uid-gid-u.patch
