--- a/series.conf
+++ b/series.conf
@@ -27257,6 +27257,7 @@
 	patches.suse/genirq-irqdesc-Honor-caller-provided-affinity-in-all.patch
 	patches.suse/ntp-Clamp-maxerror-and-esterror-to-operating-range.patch
 	patches.suse/ntp-Safeguard-against-time_constant-overflow.patch
+	patches.suse/timekeeping-Fix-bogus-clock_was_set-invocation-in-do.patch
 	patches.suse/x86-mtrr-Check-if-fixed-MTRRs-exist-before-saving-them.patch
 	patches.suse/fix-bitmap-corruption-on-close_range-with-CLOSE_RANG.patch
 	patches.suse/exec-Fix-ToCToU-between-perm-check-and-set-uid-gid-u.patch
