--- a/series.conf
+++ b/series.conf
@@ -7601,6 +7601,7 @@
 	patches.suse/perf-tools-Fix-is_compat_mode-build-break-in-ppc64.patch
 	patches.suse/perf-tools-annotate-asm_pure_loop.S.patch
 	patches.suse/perf-bpf-filter-Fix-a-parsing-error-with-comma.patch
+	patches.suse/x86-don-t-re-generate-cpufeaturemasks.h-so-eagerly.patch
 	patches.suse/nfsd-fix-management-of-listener-transports.patch
 	patches.suse/NFSD-Skip-sending-CB_RECALL_ANY-when-the-backchannel-isn-t-up.patch
 	patches.suse/NFSD-nfsd_unlink-clobbers-non-zero-status-returned-from-fh_fill_pre_attrs.patch
