x86/xen: Fix __xen_hypercall_setfunc() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8142,6 +8142,7 @@
 	patches.suse/perf-x86-intel-uncore-Fix-the-scale-of-IIO-free-running-on-icx.patch
 	patches.suse/perf-x86-intel-uncore-Fix-the-scale-of-IIO-free-running-on-spr.patch
 	patches.suse/perf-x86-intel-Allow-to-update-user-space-GPRs-from-PEBS-r.patch
+	patches.suse/x86-xen-Fix-__xen_hypercall_setfunc.patch
 	patches.suse/x86-microcode-AMD-Extend-the-SHA-check-to-Zen5-block-loadi.patch
 	patches.suse/x86-cpu-amd-Fix-workaround-for-erratum-1054.patch
 	patches.suse/drm-amdgpu-use-a-dummy-owner-for-sysfs-triggered-cle.patch
