--- a/series.conf
+++ b/series.conf
@@ -9496,6 +9496,8 @@
 	patches.suse/mm-vmscan-fix-kswapd-exit-condition-in-defrag_mode.patch
 	patches.suse/mm-page_alloc-tighten-up-find_suitable_fallback.patch
 
+	patches.suse/mm-memory-tier-Fix-abstract-distance-calculation-ove.patch
+
 	########################################################
 	# Filesystems
 	########################################################
