--- a/series.conf
+++ b/series.conf
@@ -32316,6 +32316,7 @@
 	patches.suse/nvme-fc-do-not-reference-lsrsp-after-failure.patch
 	patches.suse/btrfs-fix-qgroup-reservation-leak-on-failure-to-allo.patch
 	patches.suse/btrfs-fix-invalid-data-space-release-when-truncating.patch
+	patches.suse/btrfs-fix-wrong-start-offset-for-delalloc-space-rele.patch
 	patches.suse/crypto-qat-add-shutdown-handler-to-qat_4xxx.patch
 	patches.suse/crypto-qat-add-shutdown-handler-to-qat_420xx.patch
 	patches.suse/crypto-sun8i-ce-cipher-fix-error-handling-in-sun8i_c.patch
