btrfs: simplify condition for logging new dentries at btrfs_log_inode_parent() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31494,6 +31494,7 @@
 	patches.suse/btrfs-always-fallback-to-buffered-write-if-the-inode.patch
 	patches.suse/btrfs-fix-non-empty-delayed-iputs-list-on-unmount-du.patch
 	patches.suse/btrfs-fix-block-group-refcount-race-in-btrfs_create_.patch
+	patches.suse/btrfs-simplify-condition-for-logging-new-dentries-at.patch
 	patches.suse/dlm-prevent-NPD-when-writing-a-positive-value-to-event_done.patch
 	patches.suse/jfs-reject-on-disk-inodes-of-an-unsupported-type.patch
 	patches.suse/jfs-add-check-read-only-before-txBeginAnon-call.patch
