bridge: mcast: Fix use-after-free during router port configuration (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1516,6 +1516,7 @@
 	patches.suse/drm-amd-display-Add-debugging-message-for-brightness.patch
 	patches.suse/drm-amd-display-Fix-default-DC-and-AC-levels.patch
 	patches.suse/wifi-remove-zero-length-arrays.patch
+	patches.suse/bridge-mcast-Fix-use-after-free-during-router-port-c.patch
 	########################################################
 	# end of sorted patches
 	########################################################
