scsi: storvsc: Don't report the host packet status as the hv status (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31395,6 +31395,7 @@
 	patches.suse/scsi-scsi_debug-Remove-a-reference-to-in_use_bm.patch
 	patches.suse/scsi-lpfc-Convert-timeouts-to-secs_to_jiffies.patch
 	patches.suse/scsi-lpfc-Fix-spelling-mistake-Toplogy-Topology.patch
+	patches.suse/msft-hv-3208-scsi-storvsc-Don-t-report-the-host-packet-status-as-.patch
 	patches.suse/scsi-lpfc-Restore-clearing-of-NLP_UNREG_INP-in-ndlp-nlp_fl.patch
 	patches.suse/scsi-st-ERASE-does-not-change-tape-location.patch
 	patches.suse/scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELEC.patch
