net: mana: Add support for Multi Vports on Bare metal (bsc#1244229).

--- a/series.conf
+++ b/series.conf
@@ -32453,6 +32453,7 @@
 	patches.suse/wifi-mt76-mt7996-fix-RX-buffer-size-of-MCU-event.patch
 	patches.suse/net-usb-aqc111-fix-error-handling-of-usbnet-read-cal.patch
 	patches.suse/net-phy-fix-up-const-issues-in-to_mdio_device-and-to.patch
+	patches.suse/msft-hv-3280-net-mana-Add-support-for-Multi-Vports-on-Bare-metal.patch
 	patches.suse/net-phy-clear-phydev-devlink-when-the-link-is-delete.patch
 	patches.suse/net-phy-mscc-Fix-memory-leak-when-using-one-step-tim.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
