HID: wacom: fix memory leak on sysfs attribute creation failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32651,6 +32651,7 @@
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
+	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 
 	########################################################
 	# end of sorted patches
