--- a/series.conf
+++ b/series.conf
@@ -32653,6 +32653,7 @@
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
+	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 
 	########################################################
 	# end of sorted patches
