--- a/series.conf
+++ b/series.conf
@@ -32649,6 +32649,7 @@
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
+	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 
 	########################################################
 	# end of sorted patches
