--- a/series.conf
+++ b/series.conf
@@ -32652,6 +32652,7 @@
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
+	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 
 	########################################################
 	# end of sorted patches
