HID: wacom: fix memory leak on kobject creation failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32650,6 +32650,7 @@
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
+	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
 
 	########################################################
 	# end of sorted patches
