--- a/series.conf
+++ b/series.conf
@@ -9435,6 +9435,7 @@
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
+	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
