HID: wacom: fix memory leak on sysfs attribute creation failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9433,6 +9433,7 @@
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
+	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
