wifi: mac80211: fix beacon interval calculation overflow (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9431,6 +9431,7 @@
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
+	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
