--- a/series.conf
+++ b/series.conf
@@ -9432,6 +9432,7 @@
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
+	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
