HID: wacom: fix crash in wacom_aes_battery_handler() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9436,6 +9436,7 @@
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
+	patches.suse/HID-wacom-fix-crash-in-wacom_aes_battery_handler.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
