cpufreq/ondemand: Set io_is_busy to 1 by default on all platforms (bsc#1233975).

--- a/series.conf
+++ b/series.conf
@@ -9491,6 +9491,7 @@
 	patches.suse/cpufreq-intel_pstate-Revert-upstream-default-governo.patch
 	patches.suse/Revert-cpufreq-Avoid-configuring-old-governors-as-de.patch
 	patches.suse/cpufreq-default-to-performance-governor-on-servers.patch
+	patches.suse/cpufreq-ondemand-Set-io_is_busy-to-1-by-default-on-a.patch
 
 	# Reserved memory for memory-less zones
 	patches.suse/Revert-mm-page_alloc.c-don-t-show-protection-in-zone.patch
