--- a/series.conf
+++ b/series.conf
@@ -7990,6 +7990,7 @@
 	patches.kernel.org/6.12.35-366-ice-fix-eswitch-code-memory-leak-in-reset-sce.patch
 	patches.kernel.org/6.12.35-367-e1000e-set-fixed-clock-frequency-indication-f.patch
 	patches.kernel.org/6.12.35-368-workqueue-Initialize-wq_isolated_cpumask-in-w.patch
+	patches.kernel.org/6.12.35-369-ksmbd-add-free_transport-ops-in-ksmbd-connect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
