net: atlantic: generate software timestamp just before the doorbell (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7845,6 +7845,7 @@
 	patches.kernel.org/6.12.35-221-ipv4-route-Use-this_cpu_inc-for-stats-on-PREE.patch
 	patches.kernel.org/6.12.35-222-net-page_pool-Don-t-recycle-into-cache-on-PRE.patch
 	patches.kernel.org/6.12.35-223-xfrm-validate-assignment-of-maximal-possible-.patch
+	patches.kernel.org/6.12.35-224-net-atlantic-generate-software-timestamp-just.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
