--- a/series.conf
+++ b/series.conf
@@ -7981,6 +7981,7 @@
 	patches.kernel.org/6.12.35-357-drm-nouveau-bl-increase-buffer-size-to-avoid-.patch
 	patches.kernel.org/6.12.35-358-drm-i915-pmu-Fix-build-error-with-GCOV-and-Au.patch
 	patches.kernel.org/6.12.35-359-hwmon-occ-Rework-attribute-registration-for-s.patch
+	patches.kernel.org/6.12.35-360-hwmon-occ-fix-unaligned-accesses.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
