net/sched: fix use-after-free in taprio_dev_notifier (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7725,6 +7725,7 @@
 	patches.kernel.org/6.12.35-101-f2fs-fix-to-do-sanity-check-on-sit_bitmap_siz.patch
 	patches.kernel.org/6.12.35-102-hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
 	patches.kernel.org/6.12.35-103-NFC-nci-uart-Set-tty-disc_data-only-in-succes.patch
+	patches.kernel.org/6.12.35-104-net-sched-fix-use-after-free-in-taprio_dev_no.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
