scsi: elx: efct: Fix memory leak in efct_hw_parse_filter() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8026,6 +8026,7 @@
 	patches.kernel.org/6.12.35-402-perf-Fix-cgroup-state-vs-ERROR.patch
 	patches.kernel.org/6.12.35-403-perf-core-Fix-WARN-in-perf_cgroup_switch.patch
 	patches.kernel.org/6.12.35-404-arm64-ptrace-Fix-stack-out-of-bounds-read-in-.patch
+	patches.kernel.org/6.12.35-405-scsi-elx-efct-Fix-memory-leak-in-efct_hw_pars.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
