net_sched: sch_sfq: reject invalid perturb period (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7932,6 +7932,7 @@
 	patches.kernel.org/6.12.35-308-scsi-storvsc-Increase-the-timeouts-to-storvsc.patch
 	patches.kernel.org/6.12.35-309-scsi-s390-zfcp-Ensure-synchronous-unit_add.patch
 	patches.kernel.org/6.12.35-310-nvme-always-punt-polled-uring_cmd-end_io-work.patch
+	patches.kernel.org/6.12.35-311-net_sched-sch_sfq-reject-invalid-perturb-peri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
