scsi: s390: zfcp: Ensure synchronous unit_add (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7930,6 +7930,7 @@
 	patches.kernel.org/6.12.35-306-cifs-do-not-disable-interface-polling-on-fail.patch
 	patches.kernel.org/6.12.35-307-smb-improve-directory-cache-reuse-for-readdir.patch
 	patches.kernel.org/6.12.35-308-scsi-storvsc-Increase-the-timeouts-to-storvsc.patch
+	patches.kernel.org/6.12.35-309-scsi-s390-zfcp-Ensure-synchronous-unit_add.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
