--- a/series.conf
+++ b/series.conf
@@ -7863,6 +7863,7 @@
 	patches.kernel.org/6.12.35-239-f2fs-fix-to-bail-out-in-get_new_segment.patch
 	patches.kernel.org/6.12.35-240-netfilter-nft_set_pipapo-clamp-maximum-map-bu.patch
 	patches.kernel.org/6.12.35-241-libbpf-Add-identical-pointer-detection-to-btf.patch
+	patches.kernel.org/6.12.35-242-scsi-lpfc-Fix-lpfc_check_sli_ndlp-handling-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
