--- a/series.conf
+++ b/series.conf
@@ -7900,6 +7900,7 @@
 	patches.kernel.org/6.12.35-276-wifi-ath12k-fix-link-valid-field-initializati.patch
 	patches.kernel.org/6.12.35-277-wifi-ath12k-fix-incorrect-CE-addresses.patch
 	patches.kernel.org/6.12.35-278-wifi-ath12k-Pass-correct-values-of-center-fre.patch
+	patches.kernel.org/6.12.35-279-net-mlx5-HWS-Harden-IP-version-definer-checks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
