--- a/series.conf
+++ b/series.conf
@@ -7801,6 +7801,7 @@
 	patches.kernel.org/6.12.35-177-ACPICA-fix-acpi-parse-and-parseext-cache-leak.patch
 	patches.kernel.org/6.12.35-178-ACPICA-Apply-pack-1-to-union-aml_resource.patch
 	patches.kernel.org/6.12.35-179-ALSA-hda-cs35l41-Fix-swapped-l-r-audio-channe.patch
+	patches.kernel.org/6.12.35-180-power-supply-bq27xxx-Retrieve-again-when-busy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
