--- a/series.conf
+++ b/series.conf
@@ -7796,6 +7796,7 @@
 	patches.kernel.org/6.12.35-172-ACPICA-Avoid-sequence-overread-in-call-to-str.patch
 	patches.kernel.org/6.12.35-173-ASoC-tas2770-Power-cycle-amp-on-ISENSE-VSENSE.patch
 	patches.kernel.org/6.12.35-174-ASoC-intel-sdw_utils-Assign-initial-value-in-.patch
+	patches.kernel.org/6.12.35-175-ACPI-bus-Bail-out-if-acpi_kobj-registration-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
