s390/pci: Prevent self deletion in disable_slot() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7637,6 +7637,7 @@
 	patches.kernel.org/6.12.35-013-io_uring-kbuf-account-ring-io_buffer_list-mem.patch
 	patches.kernel.org/6.12.35-014-powerpc-pseries-msi-Avoid-reading-PCI-device-.patch
 	patches.kernel.org/6.12.35-015-s390-pci-Remove-redundant-bus-removal-and-dis.patch
+	patches.kernel.org/6.12.35-016-s390-pci-Prevent-self-deletion-in-disable_slo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
