net: Fix checksum update for ILA adj-transport (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7961,6 +7961,7 @@
 	patches.kernel.org/6.12.35-337-drm-amdgpu-read-back-register-after-written-f.patch
 	patches.kernel.org/6.12.35-338-kbuild-rust-add-rustc-min-version-support-fun.patch
 	patches.kernel.org/6.12.35-339-rust-compile-libcore-with-edition-2024-for-1..patch
+	patches.kernel.org/6.12.35-340-net-Fix-checksum-update-for-ILA-adj-transport.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
