--- a/series.conf
+++ b/series.conf
@@ -7910,6 +7910,7 @@
 	patches.kernel.org/6.12.35-286-fs-xattr.c-fix-simple_xattr_list.patch
 	patches.kernel.org/6.12.35-287-platform-x86-amd-pmc-Clear-metrics-table-at-s.patch
 	patches.kernel.org/6.12.35-288-platform-x86-amd-pmf-Prevent-amd_pmf_tee_dein.patch
+	patches.kernel.org/6.12.35-289-platform-x86-dell_rbu-Fix-list-usage.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
