RISC-V: KVM: Don't treat SBI HFENCE calls as NOPs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8028,6 +8028,7 @@
 	patches.kernel.org/6.12.35-404-arm64-ptrace-Fix-stack-out-of-bounds-read-in-.patch
 	patches.kernel.org/6.12.35-405-scsi-elx-efct-Fix-memory-leak-in-efct_hw_pars.patch
 	patches.kernel.org/6.12.35-406-RISC-V-KVM-Fix-the-size-parameter-check-in-SB.patch
+	patches.kernel.org/6.12.35-407-RISC-V-KVM-Don-t-treat-SBI-HFENCE-calls-as-NO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
