--- a/series.conf
+++ b/series.conf
@@ -7777,6 +7777,7 @@
 	patches.kernel.org/6.12.35-153-PCI-Fix-lock-symmetry-in-pci_slot_unlock.patch
 	patches.kernel.org/6.12.35-154-PCI-dw-rockchip-Remove-PCIE_L0S_ENTRY-check-f.patch
 	patches.kernel.org/6.12.35-155-PCI-dw-rockchip-Fix-PHY-function-call-sequenc.patch
+	patches.kernel.org/6.12.35-156-iio-accel-fxls8962af-Fix-temperature-scan-ele.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
