NFSv4: Don't check for OPEN feature support in v4.1 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7655,6 +7655,7 @@
 	patches.kernel.org/6.12.35-031-nfsd-nfsd4_spo_must_allow-must-check-this-is-.patch
 	patches.kernel.org/6.12.35-032-nfsd-Initialize-ssc-before-laundromat_work-to.patch
 	patches.kernel.org/6.12.35-033-SUNRPC-Prevent-hang-on-NFS-mount-with-xprtsec.patch
+	patches.kernel.org/6.12.35-034-NFSv4-Don-t-check-for-OPEN-feature-support-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
