LoongArch: Fix panic caused by NULL-PMD in huge_pte_offset() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7922,6 +7922,7 @@
 	patches.kernel.org/6.12.35-298-platform-loongarch-laptop-Add-backlight-power.patch
 	patches.kernel.org/6.12.35-299-LoongArch-vDSO-Correctly-use-asm-parameters-i.patch
 	patches.kernel.org/6.12.35-300-LoongArch-Avoid-using-r0-r1-as-mask-for-csrxc.patch
+	patches.kernel.org/6.12.35-301-LoongArch-Fix-panic-caused-by-NULL-PMD-in-hug.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
