video: screen_info: Relocate framebuffers behind PCI bridges (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7755,6 +7755,7 @@
 	patches.kernel.org/6.12.35-131-net-ch9200-fix-uninitialised-access-during-mi.patch
 	patches.kernel.org/6.12.35-132-KVM-s390-rename-PROT_NONE-to-PROT_TYPE_DUMMY.patch
 	patches.kernel.org/6.12.35-133-sysfb-Fix-screen_info-type-check-for-VGA.patch
+	patches.kernel.org/6.12.35-134-video-screen_info-Relocate-framebuffers-behin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
