iommu/vt-d: Restore context entry setup order for aliased devices (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7727,6 +7727,7 @@
 	patches.kernel.org/6.12.35-103-NFC-nci-uart-Set-tty-disc_data-only-in-succes.patch
 	patches.kernel.org/6.12.35-104-net-sched-fix-use-after-free-in-taprio_dev_no.patch
 	patches.kernel.org/6.12.35-105-net-ftgmac100-select-FIXED_PHY.patch
+	patches.kernel.org/6.12.35-106-iommu-vt-d-Restore-context-entry-setup-order-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
