--- a/series.conf
+++ b/series.conf
@@ -7902,6 +7902,7 @@
 	patches.kernel.org/6.12.35-278-wifi-ath12k-Pass-correct-values-of-center-fre.patch
 	patches.kernel.org/6.12.35-279-net-mlx5-HWS-Harden-IP-version-definer-checks.patch
 	patches.kernel.org/6.12.35-280-fbcon-Make-sure-modelist-not-set-on-unregiste.patch
+	patches.kernel.org/6.12.35-281-watchdog-da9052_wdt-respect-TWDMIN.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
