net: ethernet: cortina: Use TOE/TSO on all TCP (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7894,6 +7894,7 @@
 	patches.kernel.org/6.12.35-270-usbnet-asix-AX88772-leave-the-carrier-control.patch
 	patches.kernel.org/6.12.35-271-f2fs-fix-to-set-atomic-write-status-more-clea.patch
 	patches.kernel.org/6.12.35-272-bpf-sockmap-Fix-data-lost-during-EAGAIN-retri.patch
+	patches.kernel.org/6.12.35-273-net-ethernet-cortina-Use-TOE-TSO-on-all-TCP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
