--- a/series.conf
+++ b/series.conf
@@ -7756,6 +7756,7 @@
 	patches.kernel.org/6.12.35-132-KVM-s390-rename-PROT_NONE-to-PROT_TYPE_DUMMY.patch
 	patches.kernel.org/6.12.35-133-sysfb-Fix-screen_info-type-check-for-VGA.patch
 	patches.kernel.org/6.12.35-134-video-screen_info-Relocate-framebuffers-behin.patch
+	patches.kernel.org/6.12.35-135-pwm-axi-pwmgen-fix-missing-separate-external-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
