media: ccs-pll: Check for too high VT PLL multiplier in dual PLL case (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7671,6 +7671,7 @@
 	patches.kernel.org/6.12.35-047-media-ov2740-Move-pm-runtime-cleanup-on-probe.patch
 	patches.kernel.org/6.12.35-048-media-ccs-pll-Start-OP-pre-PLL-multiplier-sea.patch
 	patches.kernel.org/6.12.35-049-media-ccs-pll-Correct-the-upper-limit-of-maxi.patch
+	patches.kernel.org/6.12.35-050-media-ccs-pll-Check-for-too-high-VT-PLL-multi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
