media: v4l2-dev: fix error handling in __video_register_device() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7681,6 +7681,7 @@
 	patches.kernel.org/6.12.35-057-media-ipu6-Remove-workaround-for-Meteor-Lake-.patch
 	patches.kernel.org/6.12.35-058-media-mediatek-vcodec-Correct-vsi_core-frameb.patch
 	patches.kernel.org/6.12.35-059-media-omap3isp-use-sgtable-based-scatterlist-.patch
+	patches.kernel.org/6.12.35-060-media-v4l2-dev-fix-error-handling-in-__video_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
