--- a/series.conf
+++ b/series.conf
@@ -7836,6 +7836,7 @@
 	patches.kernel.org/6.12.35-212-wifi-ath12k-fix-a-possible-dead-lock-caused-b.patch
 	patches.kernel.org/6.12.35-213-wifi-ath11k-Fix-QMI-memory-reuse-logic.patch
 	patches.kernel.org/6.12.35-214-iommu-amd-Allow-matching-ACPI-HID-devices-wit.patch
+	patches.kernel.org/6.12.35-215-wifi-rtw89-leave-idle-mode-when-setting-WEP-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
