fbcon: Make sure modelist not set on unregistered console (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7901,6 +7901,7 @@
 	patches.kernel.org/6.12.35-277-wifi-ath12k-fix-incorrect-CE-addresses.patch
 	patches.kernel.org/6.12.35-278-wifi-ath12k-Pass-correct-values-of-center-fre.patch
 	patches.kernel.org/6.12.35-279-net-mlx5-HWS-Harden-IP-version-definer-checks.patch
+	patches.kernel.org/6.12.35-280-fbcon-Make-sure-modelist-not-set-on-unregiste.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
