--- a/series.conf
+++ b/series.conf
@@ -7682,6 +7682,7 @@
 	patches.kernel.org/6.12.35-058-media-mediatek-vcodec-Correct-vsi_core-frameb.patch
 	patches.kernel.org/6.12.35-059-media-omap3isp-use-sgtable-based-scatterlist-.patch
 	patches.kernel.org/6.12.35-060-media-v4l2-dev-fix-error-handling-in-__video_.patch
+	patches.kernel.org/6.12.35-061-media-venus-Fix-probe-error-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
