--- a/series.conf
+++ b/series.conf
@@ -7972,6 +7972,7 @@
 	patches.kernel.org/6.12.35-348-ipv6-remove-leftover-ip6-cookie-initializer.patch
 	patches.kernel.org/6.12.35-349-ipv6-replace-ipcm6_init-calls-with-ipcm6_init.patch
 	patches.kernel.org/6.12.35-350-smb-fix-secondary-channel-creation-issue-with.patch
+	patches.kernel.org/6.12.35-351-drm-msm-disp-Correct-porch-timing-for-SDM845.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
