ext4: ensure i_size is smaller than maxbytes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7716,6 +7716,7 @@
 	patches.kernel.org/6.12.35-092-ext4-inline-fix-len-overflow-in-ext4_prepare_.patch
 	patches.kernel.org/6.12.35-093-ext4-fix-calculation-of-credits-for-extent-tr.patch
 	patches.kernel.org/6.12.35-094-ext4-factor-out-ext4_get_maxbytes.patch
+	patches.kernel.org/6.12.35-095-ext4-ensure-i_size-is-smaller-than-maxbytes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
