--- a/series.conf
+++ b/series.conf
@@ -7906,6 +7906,7 @@
 	patches.kernel.org/6.12.35-282-bus-fsl-mc-increase-MC_CMD_COMPLETION_TIMEOUT.patch
 	patches.kernel.org/6.12.35-283-ARM-OMAP2-Fix-l4ls-clk-domain-handling-in-STA.patch
 	patches.kernel.org/6.12.35-284-tee-Prevent-size-calculation-wraparound-on-32.patch
+	patches.kernel.org/6.12.35-285-Revert-bus-ti-sysc-Probe-for-l4_wkup-and-l4_c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
