NFSD: fix race between nfsd registration and exports_proc (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7650,6 +7650,7 @@
 	patches.kernel.org/6.12.35-026-wifi-rtw88-usb-Upload-the-firmware-in-bigger-.patch
 	patches.kernel.org/6.12.35-027-wifi-ath11k-fix-ring-buffer-corruption.patch
 	patches.kernel.org/6.12.35-028-NFSD-unregister-filesystem-in-case-genl_regis.patch
+	patches.kernel.org/6.12.35-029-NFSD-fix-race-between-nfsd-registration-and-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
