jbd2: fix data-race and null-ptr-deref in jbd2_journal_dirty_metadata() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7658,6 +7658,7 @@
 	patches.kernel.org/6.12.35-034-NFSv4-Don-t-check-for-OPEN-feature-support-in.patch
 	patches.kernel.org/6.12.35-035-fs-nfs-read-fix-double-unlock-bug-in-nfs_retu.patch
 	patches.kernel.org/6.12.35-036-wifi-ath12k-fix-ring-buffer-corruption.patch
+	patches.kernel.org/6.12.35-037-jbd2-fix-data-race-and-null-ptr-deref-in-jbd2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
