ASoC: tegra210_ahub: Add check to of_device_get_match_data() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7805,6 +7805,7 @@
 	patches.kernel.org/6.12.35-181-pmdomain-core-Reset-genpd-states-to-avoid-fre.patch
 	patches.kernel.org/6.12.35-182-ACPICA-utilities-Fix-overflow-check-in-vsnpri.patch
 	patches.kernel.org/6.12.35-183-platform-msi-Add-msi_remove_device_irq_domain.patch
+	patches.kernel.org/6.12.35-184-ASoC-tegra210_ahub-Add-check-to-of_device_get.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
