--- a/series.conf
+++ b/series.conf
@@ -8023,6 +8023,7 @@
 	patches.kernel.org/6.12.35-399-smb-client-fix-max_sge-overflow-in-smb_extrac.patch
 	patches.kernel.org/6.12.35-400-s390-pci-Fix-__pcilg_mio_inuser-inline-assemb.patch
 	patches.kernel.org/6.12.35-401-perf-Fix-sample-vs-do_exit.patch
+	patches.kernel.org/6.12.35-402-perf-Fix-cgroup-state-vs-ERROR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
