--- a/series.conf
+++ b/series.conf
@@ -7987,6 +7987,7 @@
 	patches.kernel.org/6.12.35-363-aoe-clean-device-rq_list-in-aoedev_downdev.patch
 	patches.kernel.org/6.12.35-364-io_uring-sqpoll-don-t-put-task_struct-on-tctx.patch
 	patches.kernel.org/6.12.35-365-net-ice-Perform-accurate-aRFS-flow-match.patch
+	patches.kernel.org/6.12.35-366-ice-fix-eswitch-code-memory-leak-in-reset-sce.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
