--- a/series.conf
+++ b/series.conf
@@ -7855,6 +7855,7 @@
 	patches.kernel.org/6.12.35-231-pinctrl-armada-37xx-propagate-error-from-arma.patch
 	patches.kernel.org/6.12.35-232-net-mlx4-add-SOF_TIMESTAMPING_TX_SOFTWARE-fla.patch
 	patches.kernel.org/6.12.35-233-net-vertexcom-mse102x-Return-code-for-mse102x.patch
+	patches.kernel.org/6.12.35-234-wireless-purelifi-plfxlc-fix-memory-leak-in-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
