--- a/series.conf
+++ b/series.conf
@@ -7673,6 +7673,7 @@
 	patches.kernel.org/6.12.35-049-media-ccs-pll-Correct-the-upper-limit-of-maxi.patch
 	patches.kernel.org/6.12.35-050-media-ccs-pll-Check-for-too-high-VT-PLL-multi.patch
 	patches.kernel.org/6.12.35-051-media-cxusb-no-longer-judge-rbuf-when-the-wri.patch
+	patches.kernel.org/6.12.35-052-media-davinci-vpif-Fix-memory-leak-in-probe-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
