--- a/series.conf
+++ b/series.conf
@@ -7769,6 +7769,7 @@
 	patches.kernel.org/6.12.35-145-cifs-dns-resolution-is-needed-only-for-primar.patch
 	patches.kernel.org/6.12.35-146-smb-client-add-NULL-check-in-automount_fullpa.patch
 	patches.kernel.org/6.12.35-147-Drivers-hv-Allocate-interrupt-and-monitor-pag.patch
+	patches.kernel.org/6.12.35-148-uio_hv_generic-Use-correct-size-for-interrupt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
