--- a/series.conf
+++ b/series.conf
@@ -7827,6 +7827,7 @@
 	patches.kernel.org/6.12.35-203-wifi-mac80211-validate-SCAN_FLAG_AP-in-scan-r.patch
 	patches.kernel.org/6.12.35-204-sctp-Do-not-wake-readers-in-__sctp_write_spac.patch
 	patches.kernel.org/6.12.35-205-libbpf-btf-Fix-string-handling-to-support-mul.patch
+	patches.kernel.org/6.12.35-206-cpufreq-scmi-Skip-SCMI-devices-that-aren-t-us.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
