net: netmem: fix skb_ensure_writable with unreadable skbs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7991,6 +7991,7 @@
 	patches.kernel.org/6.12.35-367-e1000e-set-fixed-clock-frequency-indication-f.patch
 	patches.kernel.org/6.12.35-368-workqueue-Initialize-wq_isolated_cpumask-in-w.patch
 	patches.kernel.org/6.12.35-369-ksmbd-add-free_transport-ops-in-ksmbd-connect.patch
+	patches.kernel.org/6.12.35-370-net-netmem-fix-skb_ensure_writable-with-unrea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
