--- a/series.conf
+++ b/series.conf
@@ -7944,6 +7944,7 @@
 	patches.kernel.org/6.12.35-320-platform-x86-intel-uncore-freq-Fail-module-lo.patch
 	patches.kernel.org/6.12.35-321-sched_ext-sched-core-Don-t-call-scx_group_set.patch
 	patches.kernel.org/6.12.35-322-atm-Revert-atm_account_tx-if-copy_from_iter_f.patch
+	patches.kernel.org/6.12.35-323-wifi-rtw89-phy-add-dummy-C2H-event-handler-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
