staging: iio: ad5933: Correct settling cycles encoding per datasheet (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7757,6 +7757,7 @@
 	patches.kernel.org/6.12.35-133-sysfb-Fix-screen_info-type-check-for-VGA.patch
 	patches.kernel.org/6.12.35-134-video-screen_info-Relocate-framebuffers-behin.patch
 	patches.kernel.org/6.12.35-135-pwm-axi-pwmgen-fix-missing-separate-external-.patch
+	patches.kernel.org/6.12.35-136-staging-iio-ad5933-Correct-settling-cycles-en.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
