--- a/series.conf
+++ b/series.conf
@@ -7807,6 +7807,7 @@
 	patches.kernel.org/6.12.35-183-platform-msi-Add-msi_remove_device_irq_domain.patch
 	patches.kernel.org/6.12.35-184-ASoC-tegra210_ahub-Add-check-to-of_device_get.patch
 	patches.kernel.org/6.12.35-185-Make-cc-option-work-correctly-for-the-Wno-xyz.patch
+	patches.kernel.org/6.12.35-186-gpiolib-of-Add-polarity-quirk-for-s5m8767.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
