--- a/series.conf
+++ b/series.conf
@@ -7778,6 +7778,7 @@
 	patches.kernel.org/6.12.35-154-PCI-dw-rockchip-Remove-PCIE_L0S_ENTRY-check-f.patch
 	patches.kernel.org/6.12.35-155-PCI-dw-rockchip-Fix-PHY-function-call-sequenc.patch
 	patches.kernel.org/6.12.35-156-iio-accel-fxls8962af-Fix-temperature-scan-ele.patch
+	patches.kernel.org/6.12.35-157-accel-ivpu-Improve-buffer-object-logging.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
