--- a/series.conf
+++ b/series.conf
@@ -7659,6 +7659,7 @@
 	patches.kernel.org/6.12.35-035-fs-nfs-read-fix-double-unlock-bug-in-nfs_retu.patch
 	patches.kernel.org/6.12.35-036-wifi-ath12k-fix-ring-buffer-corruption.patch
 	patches.kernel.org/6.12.35-037-jbd2-fix-data-race-and-null-ptr-deref-in-jbd2.patch
+	patches.kernel.org/6.12.35-038-svcrdma-Unregister-the-device-if-svc_rdma_acc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
