--- a/series.conf
+++ b/series.conf
@@ -7861,6 +7861,7 @@
 	patches.kernel.org/6.12.35-237-hid-asus-check-ROG-Ally-MCU-version-and-warn.patch
 	patches.kernel.org/6.12.35-238-wifi-iwlwifi-mvm-fix-beacon-CCK-flag.patch
 	patches.kernel.org/6.12.35-239-f2fs-fix-to-bail-out-in-get_new_segment.patch
+	patches.kernel.org/6.12.35-240-netfilter-nft_set_pipapo-clamp-maximum-map-bu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
