--- a/series.conf
+++ b/series.conf
@@ -7712,6 +7712,7 @@
 	patches.kernel.org/6.12.35-088-ata-ahci-Disallow-LPM-for-ASUSPRO-D840SA-moth.patch
 	patches.kernel.org/6.12.35-089-ata-ahci-Disallow-LPM-for-Asus-B550-F-motherb.patch
 	patches.kernel.org/6.12.35-090-bus-fsl-mc-do-not-add-a-device-link-for-the-U.patch
+	patches.kernel.org/6.12.35-091-bus-fsl-mc-fix-GET-SET_TAILDROP-command-ids.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
