mm: fix ratelimit_pages update error in dirty_ratio_handler() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7738,6 +7738,7 @@
 	patches.kernel.org/6.12.35-114-ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
 	patches.kernel.org/6.12.35-115-watchdog-fix-watchdog-may-detect-false-positi.patch
 	patches.kernel.org/6.12.35-116-RDMA-iwcm-Fix-use-after-free-of-work-objects-.patch
+	patches.kernel.org/6.12.35-117-mm-fix-ratelimit_pages-update-error-in-dirty_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
