--- a/series.conf
+++ b/series.conf
@@ -7663,6 +7663,7 @@
 	patches.kernel.org/6.12.35-039-wifi-rtw88-usb-Reduce-control-message-timeout.patch
 	patches.kernel.org/6.12.35-040-wifi-rtlwifi-disable-ASPM-for-RTL8723BE-with-.patch
 	patches.kernel.org/6.12.35-041-media-ov8856-suppress-probe-deferral-errors.patch
+	patches.kernel.org/6.12.35-042-media-ov5675-suppress-probe-deferral-errors.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
