fbdev: Fix fb_set_var to prevent null-ptr-deref in fb_videomode_to_var (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7730,6 +7730,7 @@
 	patches.kernel.org/6.12.35-106-iommu-vt-d-Restore-context-entry-setup-order-.patch
 	patches.kernel.org/6.12.35-107-fbdev-Fix-do_register_framebuffer-to-prevent-.patch
 	patches.kernel.org/6.12.35-108-EDAC-altera-Use-correct-write-width-with-the-.patch
+	patches.kernel.org/6.12.35-109-fbdev-Fix-fb_set_var-to-prevent-null-ptr-dere.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
