--- a/series.conf
+++ b/series.conf
@@ -7846,6 +7846,7 @@
 	patches.kernel.org/6.12.35-222-net-page_pool-Don-t-recycle-into-cache-on-PRE.patch
 	patches.kernel.org/6.12.35-223-xfrm-validate-assignment-of-maximal-possible-.patch
 	patches.kernel.org/6.12.35-224-net-atlantic-generate-software-timestamp-just.patch
+	patches.kernel.org/6.12.35-225-pinctrl-armada-37xx-propagate-error-from-arma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
