kbuild: rust: add rustc-min-version support function (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7959,6 +7959,7 @@
 	patches.kernel.org/6.12.35-335-iio-accel-fxls8962af-Fix-temperature-calculat.patch
 	patches.kernel.org/6.12.35-336-mm-hugetlb-unshare-page-tables-during-VMA-spl.patch
 	patches.kernel.org/6.12.35-337-drm-amdgpu-read-back-register-after-written-f.patch
+	patches.kernel.org/6.12.35-338-kbuild-rust-add-rustc-min-version-support-fun.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
