cifs: do not disable interface polling on failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7927,6 +7927,7 @@
 	patches.kernel.org/6.12.35-303-jffs2-check-jffs2_prealloc_raw_node_refs-resu.patch
 	patches.kernel.org/6.12.35-304-cifs-deal-with-the-channel-loading-lag-while-.patch
 	patches.kernel.org/6.12.35-305-cifs-serialize-other-channels-when-query-serv.patch
+	patches.kernel.org/6.12.35-306-cifs-do-not-disable-interface-polling-on-fail.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
