crypto: qat - add shutdown handler to qat_dh895xcc (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7629,6 +7629,7 @@
 	patches.kernel.org/6.12.35-005-crypto-qat-add-shutdown-handler-to-qat_420xx.patch
 	patches.kernel.org/6.12.35-006-crypto-qat-add-shutdown-handler-to-qat_4xxx.patch
 	patches.kernel.org/6.12.35-007-crypto-qat-add-shutdown-handler-to-qat_c62x.patch
+	patches.kernel.org/6.12.35-008-crypto-qat-add-shutdown-handler-to-qat_dh895x.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
