--- a/series.conf
+++ b/series.conf
@@ -7912,6 +7912,7 @@
 	patches.kernel.org/6.12.35-288-platform-x86-amd-pmf-Prevent-amd_pmf_tee_dein.patch
 	patches.kernel.org/6.12.35-289-platform-x86-dell_rbu-Fix-list-usage.patch
 	patches.kernel.org/6.12.35-290-platform-x86-dell_rbu-Stop-overwriting-data-b.patch
+	patches.kernel.org/6.12.35-291-powerpc-vdso-Fix-build-of-VDSO32-with-pcrel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
