--- a/series.conf
+++ b/series.conf
@@ -7994,6 +7994,7 @@
 	patches.kernel.org/6.12.35-370-net-netmem-fix-skb_ensure_writable-with-unrea.patch
 	patches.kernel.org/6.12.35-371-bnxt_en-Fix-double-invocation-of-bnxt_ulp_sto.patch
 	patches.kernel.org/6.12.35-372-eth-bnxt-fix-out-of-range-access-of-vnic_info.patch
+	patches.kernel.org/6.12.35-373-bnxt_en-Add-a-helper-function-to-configure-MR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
