s390/pci: Fix __pcilg_mio_inuser() inline assembly (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8021,6 +8021,7 @@
 	patches.kernel.org/6.12.35-397-serial-sh-sci-Increment-the-runtime-usage-cou.patch
 	patches.kernel.org/6.12.35-398-smb-client-fix-first-command-failure-during-r.patch
 	patches.kernel.org/6.12.35-399-smb-client-fix-max_sge-overflow-in-smb_extrac.patch
+	patches.kernel.org/6.12.35-400-s390-pci-Fix-__pcilg_mio_inuser-inline-assemb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
