platform/x86: dell_rbu: Stop overwriting data buffer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7911,6 +7911,7 @@
 	patches.kernel.org/6.12.35-287-platform-x86-amd-pmc-Clear-metrics-table-at-s.patch
 	patches.kernel.org/6.12.35-288-platform-x86-amd-pmf-Prevent-amd_pmf_tee_dein.patch
 	patches.kernel.org/6.12.35-289-platform-x86-dell_rbu-Fix-list-usage.patch
+	patches.kernel.org/6.12.35-290-platform-x86-dell_rbu-Stop-overwriting-data-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
