--- a/series.conf
+++ b/series.conf
@@ -7965,6 +7965,7 @@
 	patches.kernel.org/6.12.35-341-bpf-Fix-L4-csum-update-on-IPv6-in-CHECKSUM_CO.patch
 	patches.kernel.org/6.12.35-342-erofs-remove-unused-trace-event-erofs_destroy.patch
 	patches.kernel.org/6.12.35-343-nfsd-use-threads-array-as-is-in-netlink-inter.patch
+	patches.kernel.org/6.12.35-344-sunrpc-handle-SVC_GARBAGE-during-svc-auth-pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
