--- a/series.conf
+++ b/series.conf
@@ -7691,6 +7691,7 @@
 	patches.kernel.org/6.12.35-067-media-imx-jpeg-Reset-slot-data-pointers-when-.patch
 	patches.kernel.org/6.12.35-068-media-imx-jpeg-Cleanup-after-an-allocation-er.patch
 	patches.kernel.org/6.12.35-069-media-uvcvideo-Return-the-number-of-processed.patch
+	patches.kernel.org/6.12.35-070-media-uvcvideo-Send-control-events-for-partia.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
