Kunit to check the longest symbol length (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7967,6 +7967,7 @@
 	patches.kernel.org/6.12.35-343-nfsd-use-threads-array-as-is-in-netlink-inter.patch
 	patches.kernel.org/6.12.35-344-sunrpc-handle-SVC_GARBAGE-during-svc-auth-pro.patch
 	patches.kernel.org/6.12.35-345-drm-v3d-Avoid-NULL-pointer-dereference-in-v3d.patch
+	patches.kernel.org/6.12.35-346-Kunit-to-check-the-longest-symbol-length.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
