--- a/series.conf
+++ b/series.conf
@@ -7998,6 +7998,7 @@
 	patches.kernel.org/6.12.35-374-bnxt_en-Update-MRU-and-RSS-table-of-RSS-conte.patch
 	patches.kernel.org/6.12.35-375-ptp-fix-breakage-after-ptp_vclock_in_use-rewo.patch
 	patches.kernel.org/6.12.35-376-ptp-allow-reading-of-currently-dialed-frequen.patch
+	patches.kernel.org/6.12.35-377-wifi-carl9170-do-not-ping-device-which-has-fa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
