--- a/series.conf
+++ b/series.conf
@@ -7996,6 +7996,7 @@
 	patches.kernel.org/6.12.35-372-eth-bnxt-fix-out-of-range-access-of-vnic_info.patch
 	patches.kernel.org/6.12.35-373-bnxt_en-Add-a-helper-function-to-configure-MR.patch
 	patches.kernel.org/6.12.35-374-bnxt_en-Update-MRU-and-RSS-table-of-RSS-conte.patch
+	patches.kernel.org/6.12.35-375-ptp-fix-breakage-after-ptp_vclock_in_use-rewo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
