--- a/series.conf
+++ b/series.conf
@@ -7633,6 +7633,7 @@
 	patches.kernel.org/6.12.35-009-ASoC-qcom-sdm845-Add-error-handling-in-sdm845.patch
 	patches.kernel.org/6.12.35-010-ASoC-meson-meson-card-utils-use-of_property_p.patch
 	patches.kernel.org/6.12.35-011-ASoC-amd-sof_amd_sdw-Fix-unlikely-uninitializ.patch
+	patches.kernel.org/6.12.35-012-io_uring-account-drain-memory-to-cgroup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
