media: i2c: ds90ub913: Fix returned fmt from .set_fmt() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7666,6 +7666,7 @@
 	patches.kernel.org/6.12.35-042-media-ov5675-suppress-probe-deferral-errors.patch
 	patches.kernel.org/6.12.35-043-media-imx335-Use-correct-register-width-for-H.patch
 	patches.kernel.org/6.12.35-044-media-nxp-imx8-isi-better-handle-the-m2m-usag.patch
+	patches.kernel.org/6.12.35-045-media-i2c-ds90ub913-Fix-returned-fmt-from-.se.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
