--- a/series.conf
+++ b/series.conf
@@ -7781,6 +7781,7 @@
 	patches.kernel.org/6.12.35-157-accel-ivpu-Improve-buffer-object-logging.patch
 	patches.kernel.org/6.12.35-158-accel-ivpu-Use-firmware-names-from-upstream-r.patch
 	patches.kernel.org/6.12.35-159-accel-ivpu-Use-dma_resv_lock-instead-of-a-cus.patch
+	patches.kernel.org/6.12.35-160-accel-ivpu-Fix-warning-in-ivpu_gem_bo_free.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
